client/css/overlays/states.css
/* ... */
#stateDetailsOverlay {
  --mainDetailsHeight: 300px;
  --similarDetailsHeight: 200px;
  --arrowButtonsSize: 160px;
}
#mainDetails, #similarDetails, #variantsList, #helpTexts {
  position: absolute;
  width: 60%;
  top: 10px;
  left: 20%;
  height: var(--mainDetailsHeight);
  box-sizing: border-box;
  background: var(--roomColor);
  padding-right: 20px;
  border-radius: 20px;
  overflow: auto;
}
#stateDetailsOverlay img {
  object-fit: cover;
}
#mainImage, #similarImage {
  position: fixed;
  height: var(--mainDetailsHeight);
  width: var(--mainDetailsHeight);
}
#mainImage img, #similarImage img, .variant-image img, #mainImage div, #similarImage div, .variant-image div {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 20px 0 0 20px;
}
#mainImage div, #similarImage div, .variant-image div {
  background: #fff8;
}
.notEditing .onlyForEdit {
  display: none;
}
.editing .hideForEdit {
  display: none;
}
#mainImage div button, #similarImage div button, .variant-image div button {
  margin: calc(50% - 17px) auto;
}
#mainDetails .details, #similarDetails .details {
  margin-left: var(--mainDetailsHeight);
  padding-left: 20px;
  padding-top: 14px;
  padding-bottom: 14px;
}
#mainDetails h1, #similarDetails h1 {
  color: var(--VTTblue);
  text-align: left;
  margin-top: 0;
  margin-bottom: 10px;
}
#mainDetails .material-icons, #similarDetails .material-icons {
  top: 5px;
  position: relative;
}
#mainDetails .star {
  position: fixed;
  font-size: 50px;
  background: none;
  text-shadow: 2px 2px 4px #444;
}
#mainDetails .active.star {
  color: gold;
}
#mainDetails p, #similarDetails p {
  margin-bottom: 0;
}

#similarDetails {
  top: unset;
  bottom: 10px;
  left: 10px;
  width: calc(50% - 15px);
  height: var(--similarDetailsHeight);
}
#similarDetails .details {
  margin-left: var(--similarDetailsHeight);
}
#similarDetails h1 {
  font-size: 1.3em;
}
#similarImage {
  height: var(--similarDetailsHeight);
  width: var(--similarDetailsHeight);
}
#similarDetails a {
  color: black;
}

#prevState, #nextState {
  --size: var(--arrowButtonsSize);
  min-height: var(--arrowButtonsSize);
  position: absolute;
  top: calc(10px + ( var(--mainDetailsHeight) - var(--arrowButtonsSize) ) / 2);
  left: calc(( 20% - var(--arrowButtonsSize) ) / 2);
  margin: 0;
}
#nextState {
  left: unset;
  right: calc(( 20% - var(--arrowButtonsSize) ) / 2);
}
#prevState button, #nextState button {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff8;
}
#prevState button i, #nextState button i {
  color: black;
  font-size: calc(0.8 * var(--arrowButtonsSize));
  margin: auto;
}


#variantsList {
  top: calc(var(--mainDetailsHeight) + 20px);
  bottom: calc(var(--similarDetailsHeight) + 20px);
  left: 10px;
  width: calc(50% - 15px);
  height: unset;
  padding: 0;
  overflow: auto;
}

.variantsList {
  padding: 1rem 0.5rem;
}

.variant {
  display: flex;
  justify-content: space-between;
  border-style: dotted;
  border-color: lightgray;
  border-width: 1px 0 1px 0;
  padding: 0.25rem 0.5rem;
}

.variant>div {
  display: flex;
  align-items: center;
}

.variant .variant-description {
  width: 100%;
  font-size: 0.8rem;
  line-height: 0.8rem!important;
  padding: 0 0 5px;
  font-weight: normal;
}

.variant .variant-description:empty {
  display: none;
}

.variant .variant-name {
  flex-grow: 1;
  flex-direction: column;
  align-content: flex-start;
  align-items: flex-start;
}

.variant .variant-name>div {
  line-height: 34px;
}

.variant .variant-image {
  position: relative;
  flex-grow: 0;
  flex-shrink: 0;
  height: 34px;
  width: 34px;
  margin: 1px 5px 1px 0;
  border-radius: 3px;
}
.variant img {
  height: 34px;
  width: 34px;
  border-radius: 3px;
}

.variant i {
  margin-right: 0.25rem;
}

.variant .unnamed {
  color: gray;
  font-style: italic;
}

.language-info,
.player-number-info {
  justify-content: center;
  width: auto;
  flex-grow: 0;
  flex-shrink: 1;
  padding: 0 0.75rem;
  border-left: 1px dotted lightgray;
  white-space: nowrap;
  height: 34px;
}

.player-number-info {
  min-width: 70px;
}

#variantsList [icon=add] {
  margin: 40px auto;
}


#helpTexts {
  top: calc(var(--mainDetailsHeight) + 20px);
  bottom: 10px;
  left: unset;
  right: 10px;
  width: calc(50% - 15px);
  height: unset;
  padding: 0 20px;
  overflow: auto;
  overflow-wrap: break-word;
  white-space: pre-line;
}

#helpTexts h3 {
  color: var(--VTTblue);
}

#stateScreenshot {
  width: 100%;
}

@media (min-width: 1001px) and (min-height: 626px) {
  #stateDetailsOverlay #helpTexts, #stateDetailsOverlay #similarDetails {
    display: block !important;
  }
}
@media (max-width: 1260px), (max-height: 787px) {
  #stateDetailsOverlay {
    --mainDetailsHeight: 200px;
    --similarDetailsHeight: 160px;
    --arrowButtonsSize: 100px;
  }
  #mainDetails .details, #similarDetails .details {
    padding-top: 10px;
    padding-bottom: 10px;
  }
  #mainDetails > .details > div {
    display: inline-block;
    font-size: 14px;
    margin-right: 10px;
  }
  #mainDetails .material-icons {
    font-size: 18px;
    top: 3px;
  }
  #nextState .details, #prevState .details {
    display: none;
  }
}
/* ... */

